--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -8,11 +8,22 @@ strong {
 
 .project {
   transition: ease-in-out;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
+  border-radius: 5px;
+  border-style: none;
 }
 
 .project:hover {
-  filter: drop-shadow(0px 0px 100px #8854d3);
+  /* filter: drop-shadow(0px 0px 100px #ff8181); */
   transition: ease-in-out;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
+  box-shadow: 10px 10px 103px 0px rgba(237, 165, 165, 0.75);
+  -webkit-box-shadow: 10px 10px 103px 0px rgba(237, 165, 165, 0.75);
+  -moz-box-shadow: 10px 10px 103px 0px rgba(237, 165, 165, 0.75);
+}
+
+.projectTitle {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
 }
